# tiozin

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  agents.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  release-please-config.json  run_pipelines.sh  shell.sh  tiozin.example.yaml
.claude/: CLAUDE.md  settings.json
.claude/agents/: pr-writer.md  technical-writer.md  tester.md
.claude/knowledge/: doc-reference.md  glossary.md  tech-stack.md
.claude/rules/: conventions.md  documentation.md  general.md  pull-request.md  testing.md
.claude/skills/committing/: SKILL.md
.claude/skills/creating-plugins/: SKILL.md
.claude/skills/duckdb-testing/: SKILL.md
.claude/skills/spark-testing/: SKILL.md
.claude/templates/: doc-concept.md  doc-user-guide.md
.github/: pull_request_template.md
.github/actions/setup-env/: action.yaml
.github/workflows/: pr-checks.yaml  pr.yaml  release-lockfile.yml  release.yaml
agents/: docs-agent.md  pr-agent.md  test-agent.md  test-rules.md
docker/marquez/: marquez.yml
docker/postgres-init/: 01-marquez.sql
docs/: CONTRIBUTING.md  api.md  dependencies.md  examples.md  family.md  quick-start.md  quickstart.md  registries.md  settings.md  templates.md  tio_duckdb.md  tio_spark.md  working-with-jobs.md
docs/adr/: 0001-tio-kernel-as-default-provider.md  0002-separate-classes-for-etl-step-types.md
docs/concepts/: family.md  jobs.md  proxies.md  registries.md  runners.md  steps.md
docs/extending/: families.md  lineage.md  proxies.md  registries.md  registry.md  runtime.md  tiozins.md
docs/how-to/: openlineage.md  schemas.md  secrets.md
docs/settings/: env.md  index.md  reference.md
docs/tio_duckdb/: file-input.md  file-output.md  index.md  postgres-output.md  runner.md  sql-transform.md
docs/tio_kernel/: aws-parameter-store-secret-registry.md  env-secret-registry.md  file-job-registry.md  file-setting-registry.md  index.md  linear-job.md  noops.md  open-lineage-registry.md
docs/tio_spark/: file-input.md  file-output.md  iceberg-runner.md  index.md  json-schema-inference-transform.md  runner.md  schema-inference-transform.md  sql-transform.md
examples/data/ecommerce/: customers.csv  orders.csv
examples/jobs/: dummy.yaml
examples/jobs/ecommerce/: ingestion_customers_job.yaml  ingestion_orders_job.yaml  refined_customer_orders_job.yaml
examples/jobs/iceberg/: example_iceberg_job.yaml
examples/jobs/shakespeare/: hamlet_word_count_job.yaml  ingestion.yaml  ingestion_job.yaml  kinglear_word_count_job.yaml  loverscomplaint_word_count_job.yaml  refined_hamlet_job.yaml  refined_kinglear_job.yaml  refined_loverscomplaint_job.yaml  refined_sonnets_job.yaml  sonnets_word_count_job.yaml
examples/schemas/: tiozin.eu.ecommerce.sales.raw.storefront.orders.yaml  tiozin.europe.ecommerce.retail.raw.customers.customers.yaml  tiozin.latam.literature.classics.raw.shakespeare.shakespeare.yaml
tests/: config.py  conftest.py  env.py  template.py
tests/integration/: app_run_custom_parameters_test.py  app_run_edge_cases_test.py  app_run_files_test.py  app_run_inline_test.py  app_run_manifest_test.py  app_run_programmatic_test.py  app_run_runtime_defaults_test.py  app_run_schema_test.py  app_run_secrets_test.py  app_run_settings_test.py  app_security_test.py  app_validate_test.py
tests/integration/assembly/: builder_test.py  plugin_factory_test.py  plugin_scanner_test.py  proxy_template_overlay_test.py
tests/integration/tio/: app_test.py
tests/mocks/: fake_registry_factory.py
tests/mocks/datasets/: customers.csv  customers_evolved.csv  customers_updated.csv
tests/mocks/jobs/: default.yaml  default_job.json  default_job.py  default_job.yaml  invalid.yaml
tests/mocks/lineage/: run_event.py
tests/mocks/manifests/: duplicated_key.yaml  invalid_schema.yaml  mini.json  mini.py  mini.yaml
tests/mocks/settings/: default.yaml  delegate_1.yaml  delegate_2.yaml  delegate_3.yaml  delegate_circular.yaml  delegate_to_default.yaml  delegate_to_location_empty.yaml  delegate_to_location_missing.yaml  delegate_to_location_null.yaml  delegate_to_path_missing.yaml  delegate_to_path_null.yaml  env_template.yaml  runtime_defaults.yaml
tests/stubs/: __init__.py  input.py  job.py  job_registry.py  lineage.py  metric_registry.py  output.py  runner.py  schema_registry.py  secret_registry.py  setting_registry.py  state_registry.py  transaction_registry.py  transform.py
tests/unit/: app_test.py  exceptions_test.py  test_exceptions.py  test_policies.py
tests/unit/api/: context_test.py  conventions_test.py  enums_test.py  (+7 more)
tio/: app.py  cli.py  config.py  env.py  exceptions.py  logs.py
tio/assembly/: job_builder.py  registry_factory.py
tio/model/: __init__.py  context.py  enums.py  job.py
tio/registries/: __init__.py  lifecycle.py  registry.py
tiozin/: __init__.py  app.py  cli.py  config.py  container.py  env.py  exceptions.py  lifecycle.py  logs.py  status.py
tiozin/api/: __init__.py  context.py  conventions.py  enums.py  executable.py  job_context.py  logger.py  operator.py  plugable.py  plugin.py  processor.py  registry.py  resource.py  runner.py  tiozin.py  typehint.py
tiozin/assembly/: builder.py  executable_proxy.py  job_builder.py  job_proxy.py  plugin_factory.py  plugin_scanner.py  plugin_template.py  policies.py  proxying.py  registry_factory.py  runner_proxy.py  scanner.py  step_proxy.py  template_context_builder.py  templating.py
tiozin/compose/: __init__.py  classproperty.py  exceptions.py  policies.py  reflection.py  tioproxy.py
tiozin/exceptions/: __init__.py  base.py  categories.py  misc.py
tiozin/logs/: __init__.py  redactor.py  service.py
tiozin/model/: __init__.py  component.py  context.py  input.py  job.py  operator.py  output.py  plugable.py  registry.py  resource.py  runner.py  service.py  transform.py  typehint.py
tiozin/registries/: __init__.py  lifecycle.py  registry.py
tiozin/utils/: __init__.py  app_status.py  decorators.py  helpers.py  io.py  messages.py  reflection.py  relative_date.py  runtime.py
(+387 files in other folders)
