
[project]
name = "tiozin"
version = "0.1.0"
description = "Tiozin, your friendly ETL framework"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "pydantic ==2.12.3",
  "environs ==14.3.0",
  "single-source ==0.4.0",
  "structlog ==25.5.0",
  "uuid-utils ==0.12.0",
  "typer ==0.20.0",
  "ruamel-yaml ==0.18.17",
  "fsspec ==2026.1.0",
]

[project.optional-dependencies]
aws = [
  "s3fs>=2026.1.0",
]
gcp = [
  "gcsfs>=2026.1.0",
]
azure = [
  "adlfs>=2025.8.0",
]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
]
test = [
  "pytest ==8.4.2",
  "pytest-cov ==7.0.0",
  "freezegun ==1.5.5",
  "testcontainers ==4.13.2",
  "tiozin[aws,gcp]",
]
lint = [
  "ruff ==0.14.10",
  "pre-commit ==4.3.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
tiozin = "tiozin.cli:main"

[project.entry-points."tiozin.family"]
tio_kernel = "tiozin.family.tio_kernel"

[tool.uv]
required-version = ">=0.8.1"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov --cov-report term"

[tool.coverage.run]
source = ["tiozin"]
omit = [
  "tiozin/app.py",
  "tiozin/env.py",
  "tiozin/config.py",
  "tiozin/logs.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.isort]
known-first-party = ["tiozin"]

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-unused-variables = true
remove-duplicate-keys = true
