[project]
name = "tiozin"
version = "2.0.0"
description = "Tiozin, your friendly ETL framework"
readme = "README.md"
requires-python = ">=3.11"

license = "MPL-2.0"
authors = [
  { name = "Fabricio D'Morison", email = "fabricio.dmorison@gmail.com" }
]

keywords = ["etl", "data", "pipeline", "framework", "declarative", "yaml"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]

dependencies = [
  "pydantic ~=2.12",
  "environs ~=14.3",
  "single-source ~=0.4",
  "structlog ~=25.5",
  "uuid-utils ~=0.12",
  "typer ~=0.20",
  "ruamel-yaml ~=0.18",
  "wrapt ~=2.0.1",
  "jinja2 ~=3.1.6",
  "pendulum ~=3.1.0",
  # Cloud-native filesystems (hyperscalers)
  "fsspec ~=2026.1",
  "s3fs ~=2026.1",
  "gcsfs ~=2026.1",
  "adlfs ~=2025.8",
]

[project.optional-dependencies]
tio_spark = [
  "pyspark >=3.5.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/fdmorison/tiozin"
Repository = "https://github.com/fdmorison/tiozin"
Issues = "https://github.com/fdmorison/tiozin/issues"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
]

test = [
  "pytest ==8.4.2",
  "pytest-cov ==7.0.0",
  "freezegun ==1.5.5",
  "testcontainers ==4.13.2",
  "assertpy ==1.1",
  "pandas ==2.3.3",
  "pyarrow ==23.0.0",
  "numpy ==1.26.4",
  "tiozin[tio_spark]",
]

lint = [
  "ruff ==0.14.10",
  "pre-commit ==4.3.0",
]

[project.scripts]
tiozin = "tiozin.cli:main"

[project.entry-points."tiozin.family"]
tio_kernel = "tiozin.family.tio_kernel"
tio_spark = "tiozin.family.tio_spark"

[tool.uv]
required-version = ">=0.8.1"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib --cov --cov-report term"

[tool.coverage.run]
source = ["tiozin"]
omit = [
  "tiozin/env.py",
  "tiozin/config.py",
  "tiozin/logs.py",
  "tiozin/**/__init__.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.isort]
known-first-party = ["tiozin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
  "tiozin",
  "README.md",
  "pyproject.toml"
]
